@@ -292,6 +292,7 @@ template<> void databasecreator<character>::CreateDataBaseMemberMap()
   ADD_MEMBER(IsPlant);
   ADD_MEMBER(MoveType);
   ADD_MEMBER(DestroysWalls);
+  ADD_MEMBER(CanMove);
 }
 
 template<> void databasecreator<item>::CreateDataBaseMemberMap()
