@@ -104,6 +104,7 @@ character
 	IsPlant = false;
 	MoveType = WALK;
 	DestroysWalls = false;
+	CanMove = true;
 }
 
 humanoid
@@ -2420,6 +2421,7 @@ angel
 	CanBeConfused = false;
 	WieldedPosition = 0, -2;
 	MoveType = FLY;
+	UsesNutrition = false;
 }
 
 kamikazedwarf
@@ -2655,7 +2657,7 @@ carnivorousplant
 	StandVerb = "rooted";
 	AttachedGod = SILVA;
 	IsPlant = true;
-	MoveType = NO_MOVE;
+	CanMove = false;
 
 	Config GREATER;
 	{
@@ -3352,7 +3354,7 @@ mushroom
 	CanBeDisplaced = false;
 	PanicLevel = 0;
 	CanOpen = false;
-	MoveType = NO_MOVE;
+	CanMove = false;
 }
 
 magicmushroom
@@ -3790,7 +3792,7 @@ genetrixvesana
 	HasFeet = false;
 	SpillsBlood = false;
 	StandVerb = "rooted";
-	MoveType = NO_MOVE;
+	CanMove = false;
 }
 
 hedgehog
@@ -3916,6 +3918,7 @@ vladimir
 	Alias == "Vladimir";
 	TotalVolume = 800000;
 	IsUnique = true;
+	CanApply = true;
 }
 
 hattifattener
